# gen-gec-errant

./: .gitignore  README.md  __init__.py  analysis.py  config.py  csv_export.py  data_loader.py  error_annotation.py  gec.py  generate_repro_dirs.py  generation.py  paper-abstract-v2-cmcl.md  paper-abstract.md  pipeline-explanation.md  preprocess_efcamdat.py  pyproject.toml  quickstart.py  requirements.txt  run_pipeline.py  run_pipeline_with_resume.py  setup_and_run.sh
configs/: expected_outputs.yaml
configs/analysis/: default.yaml
configs/data_loader/: default.yaml
configs/gec/: default.yaml  gemma.yaml
configs/generation/: default.yaml  gpt2_learner.yaml  gpt2_small_all_data.yaml  pythia_70m.yaml
configs/pipeline/: celva-all-models.yaml  celva-sample.yaml  default.yaml  dummy.yaml  efcamdat-test-all-models.yaml  kupa-keys-all-models.yaml  quickstart.yaml
configs/preprocessing/: default.yaml
deploy/: run_all_models_remote.sh  run_large_models_remote.sh  setup_and_run.sh
docs/: experiment-plan.md
notebooks/: colab_run_all_models.ipynb  colab_run_all_models_celva_sp.ipynb  colab_run_all_models_kupa_keys.ipynb  colab_run_pipeline.ipynb
reproducibility/: VASTAI-REPRODUCIBILITY-INSTRUCTIONS.md
reproducibility/paper-reproducibility-ft-gpt2-large/: IO.md  commands.md
reproducibility/paper-reproducibility-ft-gpt2-medium/: IO.md  commands.md
reproducibility/paper-reproducibility-ft-gpt2-small/: IO.md  commands.md
reproducibility/paper-reproducibility-ft-pythia-1.4b/: IO.md  commands.md
scripts/: run_pipeline.sh
src/gen_gec_errant/: registry.py
(+86 files in other folders)
